--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [user, user.items.new], remote: true do |f| %>
+<%= form_for [user, item], remote: true do |f| %>
     <div class="form-item">
       <%= f.text_field :name, class: 'form-field' %>
     </div>
